Fixing footer responsive layout issues.

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_footer.scss
@@ -90,8 +90,14 @@ article#widget_text {
   }
 }
 
+@include breakpoint(medium down) {
+  #footer-container, .textwidget, .widget_nav_men {
+    text-align: center;
+  }
+}
+
 //align copyright to the right
-@include breakpoint(medium up) {
+@include breakpoint(large up) {
   #footer-container {
     .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
         text-align: right;
